<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SW Consultoria</string>
    <string name="action_settings">Settings</string>
    <string name="Entrar">Entrar</string>
    <string name="logo">Logo</string>
    <string name="Usuario">Usuário</string>
    <string name="Senha">Senha</string>
    
    
    <string name="consultoresico">Consultores</string>
    <string name="projetosico">Projetos</string>
    <string name="empresasico">Empresas</string>
    <string name="apontamentosico">Apontamentos</string>
    <string name="agendaico">Agenda</string>
    
    
    <string name="Titulo">Título</string>
    <string name="data">Data</string>
    <string name="TipoHora">Tipo de hora</string>
    <string name="Tipoconsultoria">Tipo de consultoria</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="individual">Individual</string>
    <string name="grupo">Grupo</string>      
    <string name="apontamentos">Apontamentos</string>
      

</resources>
